tests/rosetta/out/Smalltalk/catalan-numbers-1.out
/tmp/catalan-numbers-1.st:13: parse error, expected ']'
